fix(tabbar): Tabbar not showing menu items correctly

--- a/src/core/styles/components/tabbar/_tabbar-component.scss
+++ b/src/core/styles/components/tabbar/_tabbar-component.scss
@@ -35,6 +35,8 @@
     }
 
     @include e(menu-item, $m: selected) {
+        @extend %igx-tabbar-menu-item !optional;
+
         .tab-icon {
             @extend %igx-tab-icon--selected !optional;
         }
@@ -45,6 +47,7 @@
     }
 
     @include e(menu-item, $m: disabled) {
+        @extend %igx-tabbar-menu-item !optional;
         @extend %igx-tabbar-menu-item--disabled !optional;
     }
 }
