--- a/src/tabbar/tab-bar-content.component.html
+++ b/src/tabbar/tab-bar-content.component.html
@@ -2,16 +2,11 @@
     <ng-content></ng-content>
 </div>
 <div #tablist class="{{itemStyle}}__menu {{itemStyle}}__menu--bottom" role="tablist" aria-orientation="horizontal">
-    <igx-tab *ngFor="let panel of panels"
-             [id]="'igx-tab-' + panel.index"
-             [attr.aria-label]= "panel.label"
-             [attr.aria-disabled]="panel.isDisabled"
-             [attr.aria-selected]="panel.isSelected"
-             [attr.aria-controls]="'igx-tab-panel-'+ panel.index"
-             [class.igx-tab-bar__menu-item--selected]="panel.isSelected"
-             [class.igx-tab-bar__menu-item--disabled]="panel.isDisabled"
-             [relatedPanel]="panel"
-             (click)= "panel.select()"
-             role="tab" >
+    <igx-tab *ngFor="let panel of panels" [id]="'igx-tab-' + panel.index" [attr.aria-label]="panel.label" [attr.aria-disabled]="panel.isDisabled"
+        [attr.aria-selected]="panel.isSelected" [attr.aria-controls]="'igx-tab-panel-'+ panel.index" [ngClass]="{
+                 'igx-tab-bar__menu-item': !panel.isSelected && !panel.isDisabled,
+                 'igx-tab-bar__menu-item--selected': panel.isSelected,
+                 'igx-tab-bar__menu-item--disabled': panel.isDisabled
+             }" [relatedPanel]="panel" (click)="panel.select()" role="tab">
     </igx-tab>
 </div>
