--- a/src/core/styles/components/avatar/_avatar-theme.scss
+++ b/src/core/styles/components/avatar/_avatar-theme.scss
@@ -36,16 +36,19 @@ $components: register-component($components, #{$component-name});
     %igx-avatar--small {
         width: em(40px, 16px);
         height: em(40px, 16px);
+        min-width: em(40px, 16px);
     }
 
     %igx-avatar--medium {
         width: em(64px, 16px);
         height: em(64px, 16px);
+        min-width: em(64px, 16px);
     }
 
     %igx-avatar--large {
         width: em(88px, 16px);
         height: em(88px, 16px);
+        min-width: em(88px, 16px);
     }
 
     %igx-avatar--icon {
