--- a/src/core/styles/components/badge/_badge-theme.scss
+++ b/src/core/styles/components/badge/_badge-theme.scss
@@ -11,6 +11,9 @@ $components: register-component($components, #{$component-name});
     $disableBorder: true
 ) {
 
+    @debug 'disableShadow: #{$disableShadow}';
+    @debug 'disableBorder: #{$disableBorder}';
+
     @if not($color) and $background-color {
         $color: text-contrast($background-color);
     }
@@ -53,11 +56,11 @@ $components: register-component($components, #{$component-name});
     $border-width: 1px;
     $border-type: solid;
 
-    @if map-get($theme, 'disableShadow') {
+    @if map-get($this, 'disableShadow') {
         $badge-shadow: none;
     }
 
-    @if map-get($theme, 'disableBorder') {
+    @if map-get($this, 'disableBorder') {
         $border-width: 0;
     }
 
