--- a/src/core/styles/components/avatar/_avatar-theme.scss
+++ b/src/core/styles/components/avatar/_avatar-theme.scss
@@ -36,6 +36,9 @@ $components: register-component($components, #{$component-name});
     );
 
     $this: extend($default-theme, $theme);
+    $small-size: 40px;
+    $medium-size: 64px;
+    $large-size: 88px;
 
     %igx-avatar-display {
         position: relative;
@@ -47,21 +50,21 @@ $components: register-component($components, #{$component-name});
     }
 
     %igx-avatar--small {
-        width: em(40px, 16px);
-        height: em(40px, 16px);
-        min-width: em(40px, 16px);
+        width: rem($small-size);
+        height: rem($small-size);
+        min-width: rem($small-size);
     }
 
     %igx-avatar--medium {
-        width: em(64px, 16px);
-        height: em(64px, 16px);
-        min-width: em(64px, 16px);
+        width: rem($medium-size);
+        height: rem($medium-size);
+        min-width: rem($medium-size);
     }
 
     %igx-avatar--large {
-        width: em(88px, 16px);
-        height: em(88px, 16px);
-        min-width: em(88px, 16px);
+        width: rem($large-size);
+        height: rem($large-size);
+        min-width: rem($large-size);
     }
 
     %igx-avatar-inner {
@@ -83,21 +86,26 @@ $components: register-component($components, #{$component-name});
     }
 
     %igx-avatar-initials {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         text-transform: uppercase;
-        fill: map-get($this, 'initials-color');
+        color: map-get($this, 'initials-color');
         background-color: map-get($this, 'initials-background');
     }
 
     %igx-avatar-initials--small {
-        font-size: rem(16px);
-        font-weight: 600;
+        font-size: rem($small-size / 2);
+        line-height: rem($small-size);
     }
 
     %igx-avatar-initials--medium {
-        font-size: rem(32px);
+        font-size: rem($medium-size / 2);
+        line-height: rem($medium-size);
     }
 
     %igx-avatar-initials--large {
-        font-size: rem(44px);
+        font-size: rem($large-size / 2);
+        line-height: rem($large-size);
     }
 }
