fix(avatar): trunkate initials to 2 characters

--- a/src/avatar/avatar.component.html
+++ b/src/avatar/avatar.component.html
@@ -4,8 +4,8 @@
 </ng-template>
 
 <ng-template #initialsTemplate>
-    <div #initialsImage class="igx-avatar__initials" [style.backgroundColor]="bgColor" [attr.aria-roledescription]="roleDescription">
-        <span>{{initials}}</span>
+    <div #initialsImage class="igx-avatar__initials" [style.backgroundColor]="bgColor" [style.color]="color" [attr.aria-roledescription]="roleDescription">
+        <span>{{initials.substring(0, 2)}}</span>
     </div>
 </ng-template>
 
