--- a/src/core/styles/base/utilities/_mixins.scss
+++ b/src/core/styles/base/utilities/_mixins.scss
@@ -61,3 +61,9 @@ $default-margin: 0;
     }
     animation: $animations;
 }
+
+@mixin ellipsis() {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
