--- a/demos/app/grid-performance/sample.component.html
+++ b/demos/app/grid-performance/sample.component.html
@@ -1,5 +1,5 @@
 <igx-grid #grid1 [data]="localData" (onCellSelection)="selectCell($event)" [width]="'1200px'" [height]="'800px'">
-    <igx-column  *ngFor="let c of columns" [sortable]="true" [field]="c.field" [header]="c.field" [width]="c.width">
+    <igx-column  *ngFor="let c of columns" [sortable]="true" [filterable]="true" [field]="c.field" [header]="c.field" [width]="c.width">
     </igx-column>
 </igx-grid>
 <br/>
