fix(avatar): listen for pointer events
replace "pointer-events: none" with "user-select: none"

--- a/src/core/styles/components/avatar/_avatar-theme.scss
+++ b/src/core/styles/components/avatar/_avatar-theme.scss
@@ -42,7 +42,7 @@ $components: register-component($components, #{$component-name});
 
     %igx-avatar-display {
         position: relative;
-        pointer-events: none;
+        user-select: none;
     }
 
     %igx-avatar--rounded {
