Making some small improvements on the API

--- a/src/list/list.component.html
+++ b/src/list/list.component.html
@@ -1,7 +1,7 @@
 <ng-content></ng-content>
 
 <ng-template #defaultEmptyList>
-	<p>Nema itemi</p>
+	<p>No items placeholder.</p>
 </ng-template>
 
 <ng-container *ngIf="children && children.length === 0">
