--- a/src/core/styles/themes/_core.scss
+++ b/src/core/styles/themes/_core.scss
@@ -4,6 +4,9 @@
 @import '../typography/index';
 
 @import '../components/_common/igx-control';
+@import '../components/_common/igx-display-container';
+@import '../components/_common/igx-vhelper';
+
 @import '../components/avatar/avatar-component';
 @import '../components/badge/badge-component';
 @import '../components/button/button-component';
