--- a/src/core/styles/components/button/_button-theme.scss
+++ b/src/core/styles/components/button/_button-theme.scss
@@ -3,127 +3,153 @@ $component-name: 'igx-button';
 $components: register-component($components, #{$component-name});
 
 @function igx-button-theme(
-    $button-text-color: null,
-
-    $button-flat-text-color: null,
-    $button-flat-hover-background: null,
-    $button-flat-focus-background: null,
-
-    $button-raised-text-color: null,
-    $button-raised-background: null,
-    $button-raised-hover-background: null,
-    $button-raised-focus-background: null,
-
-    $button-fab-text-color: null,
-    $button-fab-focus-background: null,
-    $button-fab-background: null,
-
-    $button-icon-hover-background: null,
-    $button-icon-focus-background: null,
-
-    $button-disabled-text-color: null,
-    $button-disabled-background: null
+    // Global Button
+    $button-roundness: null,
+    // Default Button
+    $text-color: null,
+    $background-color: null,
+    // Flat Button
+    $flat-text-color: null,
+    $flat-background: null,
+    $flat-hover-background: null,
+    $flat-focus-background: null,
+    // Raised Button
+    $raised-text-color: null,
+    $raised-background: null,
+    $raised-hover-background: null,
+    $raised-focus-background: null,
+    // Fab Button ( Floating action button )
+    $fab-text-color: null,
+    $fab-background: null,
+    $fab-focus-background: null,
+    // Icon Button
+    $icon-color: null,
+    $icon-background: null,
+    $icon-hover-background: null,
+    $icon-focus-background: null,
+    // Disabled Button
+    $disabled-color: null,
+    $disabled-background: null
 ) {
+    // Default Button
+    @if not($text-color) and $background-color {
+        $text-color: text-contrast($background-color);
+    }
+    // Flat Button
+    @if not($flat-text-color) and $raised-background {
+        $flat-text-color: text-contrast($raised-background);
+    }
+    // Raised Button
+    @if not($raised-text-color) and $fab-background {
+        $raised-text-color: text-contrast($fab-background);
+    }
+    // Fab Button ( Floating action button )
+    @if not($fab-text-color) and $background-color {
+        $fab-text-color: text-contrast($background-color);
+    }
+
+    // icon Button ( Floating action button )
+    @if not($icon-color) and $icon-background {
+        $icon-color: text-contrast($icon-background);
+    }
+
     @return (
-        button-text-color: $button-text-color,
+        // Global
+        button-roundness: $button-roundness,
+        // Default Button
+        text-color: $text-color,
+        background-color: $background-color,
         // Flat Button
-        button-flat-text-color: $button-flat-text-color,
-        button-flat-hover-background: $button-flat-hover-background,
-        button-flat-focus-background: $button-flat-focus-background,
+        flat-text-color: $flat-text-color,
+        flat-background: $flat-background,
+        flat-hover-background: $flat-hover-background,
+        flat-focus-background: $flat-focus-background,
         // Raised Button
-        button-raised-text-color: $button-raised-text-color,
-        button-raised-background: $button-raised-background,
-        button-raised-hover-background: $button-raised-hover-background,
-        button-raised-focus-background: $button-raised-focus-background,
+        raised-text-color: $raised-text-color,
+        raised-background: $raised-background,
+        raised-hover-background: $raised-hover-background,
+        raised-focus-background: $raised-focus-background,
         // Fab Button ( Floating action button )
-        button-fab-text-color: $button-fab-text-color,
-        button-fab-background: $button-fab-background,
-        button-fab-focus-background: $button-fab-focus-background,
+        fab-text-color: $fab-text-color,
+        fab-background: $fab-background,
+        fab-focus-background: $fab-focus-background,
         // Icon Button
-        button-icon-hover-background:$button-icon-hover-background,
-        button-icon-focus-background:$button-icon-focus-background,
-        // Icon Button
-        button-disabled-text-color:$button-disabled-text-color,
-        button-disabled-background:$button-disabled-background,
+        icon-color:$icon-color,
+        icon-background:$icon-background,
+        icon-hover-background:$icon-hover-background,
+        icon-focus-background:$icon-focus-background,
+        // Disabled Button
+        disabled-color:$disabled-color,
+        disabled-background:$disabled-background,
     );
 }
 @mixin igx-button($theme, $palette: $default-palette) {
     $default-theme: igx-button-theme(
-        $button-text-color: igx-color($palette, grays, 800),
+        // Global
+        $button-roundness: 2px,
+        // Default Button
+        $text-color: igx-color($palette, grays, 800),
+        $background-color: $white,
         // Flat button
-        $button-flat-text-color: igx-color($palette, accent, 500),
-        $button-flat-hover-background: igx-color($palette, grays, 100),
-        $button-flat-focus-background: igx-color($palette, grays, 400),
+        $flat-text-color: igx-color($palette, accent, 500),
+        $flat-background: transparent,
+        $flat-hover-background: igx-color($palette, grays, 100),
+        $flat-focus-background: igx-color($palette, grays, 400),
         // Raised Button
-        $button-raised-text-color: igx-contrast-color($palette, accent, 500),
-        $button-raised-background: igx-color($palette, accent, 500),
-        $button-raised-hover-background: igx-color($palette, accent, 700),
-        $button-raised-focus-background: igx-color($palette, accent, 700),
+        $raised-text-color: igx-contrast-color($palette, accent, 500),
+        $raised-background: igx-color($palette, accent, 500),
+        $raised-hover-background: igx-color($palette, accent, 700),
+        $raised-focus-background: igx-color($palette, accent, 700),
         // Fab button ( Floating action button )
-        $button-fab-text-color: igx-contrast-color($palette, accent, 500),
-        $button-fab-background: igx-color($palette, accent, 500),
-        $button-fab-focus-background: igx-color($palette, accent, 500),
+        $fab-text-color: igx-contrast-color($palette, accent, 500),
+        $fab-background: igx-color($palette, accent, 500),
+        $fab-focus-background: igx-color($palette, accent, 500),
         // Icon Button
-        $button-icon-hover-background: igx-color($palette, grays, 100),
-        $button-icon-focus-background: igx-color($palette, grays, 400),
+        $icon-color: igx-color($palette, grays, 800),
+        $icon-background: transparent,
+        $icon-hover-background: igx-color($palette, grays, 100),
+        $icon-focus-background: igx-color($palette, grays, 400),
         // Icon Button
-        $button-disabled-text-color: igx-color($palette, grays, 400),
-        $button-disabled-background: igx-color($palette, grays, 100)
+        $disabled-color: igx-color($palette, grays, 400),
+        $disabled-background: igx-color($palette, grays, 100)
     );
 
     // TODO remove all commented variables in this list, after the component is done.
     // 3. Buttons //
+
     // Shared Styles
     $button-border: none !default;
     $button-radius: 2px !default;
-    $button-font-size: em(16px, 16px) !default;
+    $button-font-size: rem(14px, 16px) !default;
     $button-font-weight: normal !default;
-    $button-width: em(88px) !default;
-    $button-height: em(40px) !default;
-    $button-padding: em(8px) em(16px) !default;
+    $button-width: rem(88px) !default;
+    $button-height: rem(40px) !default;
+    $button-padding: rem(8px) rem(16px) !default;
     $button-transition: all .25s ease-out !default;
     $button-round-radius: 50% !default;
-
     // Disabled Styles
     $button-disabled-shadow: none !default;
-
     // Raised Buttons
     $button-raised-shadow: $elevate-2 !default;
     $button-raised-focus-shadow: $elevate-8 !default;
-
-    // Gradient Buttons
-    $button-gradient-color-1: igx-color($palette, 'accent') !default;
-    $button-gradient-color-2: igx-color($palette, 'accent') !default;
-    $button-gradient-background: linear-gradient(to bottom right, $button-gradient-color-2, $button-gradient-color-1) !default;
-    $button-focus-gradient: linear-gradient(to bottom right, gen-color($button-gradient-color-1, 700), gen-color($button-gradient-color-2, 700)) !default;
-    $button-gradient-color: $white !default;
-    $button-gradient-shadow: 0 4px 10px -2px darken(transparentize($button-gradient-color-2, .2), 20%) !default;
-    $button-gradient-focus-shadow: 0 6px 12px -1px darken(transparentize($button-gradient-color-2, .25), 25%) !default;
-
-    /*$button-flat-hover-background: $off-white !default;*/
-
-    $button-flat-focus-background: $lightgray !default;
-
     // Floating Buttons
-    $button-floating-width: em(56px) !default;
+    $button-floating-width: rem(56px) !default;
     $button-floating-height: $button-floating-width;
     $button-floating-shadow: $elevate-6 !default;
     $button-floating-hover-shadow: $elevate-12 !default;
-
     // Icon Buttons
-    $button-icon-width: em(36px, 16px) !default;
+    $button-icon-width: rem(36px, 16px) !default;
     $button-icon-height: $button-icon-width !default;
-    $button-icon-font-size: em(24px, 24px) !default;
-
+    $button-icon-font-size: rem(24px, 24px) !default;
     // Navbar Buttons
-    $button-navbar-width: em(24px, 16px) !default;
+    $button-navbar-width: rem(24px, 16px) !default;
     $button-navbar-height: $button-navbar-width !default;
     $button-navbar-padding: 0 !default;
+
     $this: extend($default-theme, $theme);
 
-    // @debug $this;
-
     %igx-button-display {
+        background: map-get($this, 'background-color');
         display: inline-block;
         position: relative;
         min-width: $button-width;
@@ -132,9 +158,9 @@ $components: register-component($components, #{$component-name});
         font-size: $button-font-size;
         font-weight: $button-font-weight;
         text-align: center;
-        color: map-get($this, button-text-color);
+        color: map-get($this, 'text-color');
         border: $button-border;
-        border-radius: $button-radius;
+        border-radius: map-get($this, 'button-roundness');
         text-transform: uppercase;
         cursor: pointer;
         user-select: none;
@@ -145,51 +171,33 @@ $components: register-component($components, #{$component-name});
     }
 
     %igx-button--flat {
-        background: transparent;
-        color: map-get($this, button-flat-text-color);
+        background: map-get($this, 'flat-background');
+        color: map-get($this, 'flat-text-color');
 
         &:hover {
-            background: map-get($this, button-flat-hover-background);
+            background: map-get($this, 'utton-flat-hover-background');
         }
 
         &:focus,
         &:active {
-            background: map-get($this, button-flat-focus-background);
+            background: map-get($this, 'flat-focus-background');
         }
     }
 
     %igx-button--raised {
-        color: map-get($this, button-raised-text-color);
-        background: map-get($this, button-raised-background);
+        color: map-get($this, 'raised-text-color');
+        background: map-get($this, 'raised-background');
         box-shadow: $button-raised-shadow;
 
         &:hover {
-            background: map-get($this, button-raised-hover-background);
+            background: map-get($this, 'raised-hover-background');
             box-shadow: $button-raised-shadow;
         }
 
         &:focus,
         &:active {
-            background: map-get($this, button-raised-focus-background);
+            background: map-get($this, 'raised-focus-background');
             box-shadow: $button-raised-focus-shadow;
-        }
-    }
-
-    // TODO WE NEED TO REMOVE GRADIENT BUTTON
-    %igx-button--gradient {
-        color: $button-gradient-color;
-        background: $button-gradient-background;
-        box-shadow: $button-gradient-shadow;
-
-        &:hover {
-            background: $button-focus-gradient;
-            box-shadow: $button-gradient-shadow;
-        }
-
-        &:focus,
-        &:active {
-            background: $button-focus-gradient;
-            box-shadow: $button-gradient-focus-shadow;
         }
     }
 
@@ -226,8 +234,8 @@ $components: register-component($components, #{$component-name});
     %igx-button--fab {
         width: $button-floating-width;
         height: $button-floating-height;
-        color: map-get($this, button-fab-text-color);
-        background: map-get($this, button-fab-background);
+        color: map-get($this, 'fab-text-color');
+        background: map-get($this, 'fab-background');
         box-shadow: $button-floating-shadow;
 
         &:hover {
@@ -236,7 +244,7 @@ $components: register-component($components, #{$component-name});
 
         &:focus,
         &:active {
-            background: map-get($this, button-fab-focus-background);
+            background: map-get($this, 'fab-focus-background');
         }
     }
 
@@ -244,16 +252,17 @@ $components: register-component($components, #{$component-name});
         width: $button-icon-width;
         height: $button-icon-width;
         font-size: $button-icon-font-size;
-        background: transparent;
+        color: map-get($this, 'icon-color');
+        background: map-get($this, 'icon-background');
 
         &:hover {
             transition: $button-transition;
-            background: map-get($this, button-icon-hover-background);
+            background: map-get($this, 'icon-hover-background');
         }
 
         &:focus,
         &:active {
-            background: map-get($this, button-icon-focus-background);
+            background: map-get($this, 'icon-focus-background');
         }
     }
 
@@ -267,10 +276,11 @@ $components: register-component($components, #{$component-name});
     }
 
     %igx-button--disabled {
-        color: map-get($this, button-disabled-text-color) !important;
-        background: map-get($this, button-disabled-background) !important;
+        color: map-get($this, 'disabled-color') !important;
+        background: map-get($this, 'disabled-background') !important;
         pointer-events: none !important;
         box-shadow: $button-disabled-shadow !important;
         opacity: .8 !important;
     }
 }
+
